# opentogethertube

./: .dockerignore  .eslintignore  .eslintrc.js  .eslintrc.json  .gitattributes  .gitignore  .gitpod.yml  .prettierignore  .prettierrc  .slugignore  .travis.yml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Procfile  README.md  Rocket.toml  SECURITY.md  announce.sh  api.js  app.js  babel.config.js  biome.json  biome.jsonc  codecov.yml  cypress.config.ts  cypress.json  docker-compose.yml  express-types.d.ts  ffprobe.js  fly.balancer.toml  fly.monolith.toml  husky.config.js  infoextract.js  jest.config.js  logger.js  optic.dev.yml  optic.yml  package-lock.json  package.json  (+14 more)
.claude/skills/: shadcn-vue
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.yml  question-troubleshooting.md  service-support-request.md  service-support-request.yml
.github/workflows/: bundle-size.yml  codeql-analysis.yml  e2e.yml  main.yml  pr-commands.yml  release-tag.yml  rerun-jobs.yml  rust.yml  upstream-sync.yml
.optic/: ignore
.optic/api/: specification.json
.yarn/patches/: @grafana-e2e-npm-10.0.3-935c77e26f.patch
balancer-visualization-prototype/ott-visualizationprototype-panel/: README.md  package.json
balancer-visualization/balancer-visualization/: README.md  package.json  vue.config.js
benchmarks/clients/: environment.yml  stress.py
benchmarks/golang/: go.mod  main.go
benchmarks/rust/: Cargo.toml
benchmarks/rust/src/: main.rs
client/: .eslintignore  .eslintrc.js  .eslintrc.json  babel.config.js  components.json  cypress.config.ts  fonts.css  index.html  package.json  postcss.config.js  tsconfig.json  vite.config.js  vue.config.js
client/src/: .eslintrc.js  .eslintrc.json  App.vue  common-http.ts  common.scss  fonts.scss  i18n.ts  installCompositionApi.js  main.js  main.ts  router.js  router.ts  shims-vue.d.ts  shims-vuetify.d.ts  store.js  store.ts  (+4 more)
common/: .eslintignore  .eslintrc.json  .gitignore  constants.ts  exceptions.ts  index.ts  package.json  permissions.js  permissions.ts  queueexport.ts  result.ts  serialize.ts  subtitle.ts  timestamp.ts  tsconfig.json  typeutils.ts  userutils.ts  video.js  vitest.config.ts  voteskip.ts
config/: config.js  config.json
crates/harness/: Cargo.toml
crates/harness-tests/: Cargo.toml
crates/harness-tests/src/: connection.rs  main.rs  routing.rs  state.rs
crates/harness/src/: client.rs  lib.rs  monolith.rs  provider.rs  test.rs  test_runner.rs  traits.rs  util.rs
crates/harness/src/monolith/: behavior.rs
crates/ott-balancer/: Cargo.toml
crates/ott-balancer-bin/: Cargo.toml
crates/ott-balancer-bin/src/: balancer.rs  client.rs  config.rs  connection.rs  discovery.rs  main.rs  messages.rs  monolith.rs  proxy.rs  room.rs  service.rs  websocket.rs
crates/ott-balancer-bin/src/discovery/: fly.rs  harness.rs  manual.rs
crates/ott-balancer-bin/src/protocol/: client.rs  mod.rs  monolith.rs
crates/ott-balancer/benches/: joins.rs  latency.rs  selection.rs  throughput.rs
crates/ott-balancer/src/: balancer.rs  client.rs  config.rs  connection.rs  discovery.rs  lib.rs  messages.rs  monolith.rs  selection.rs  service.rs  state_stream.rs
crates/ott-balancer/src/discovery/: dns.rs  harness.rs
crates/ott-collector/: Cargo.toml
crates/ott-collector/src/: collector.rs  config.rs  cors.rs  event_bus.rs  main.rs
crates/ott-common/: Cargo.toml
crates/ott-common/src/: discovery.rs  lib.rs
crates/ott-common/src/discovery/: dns.rs  fly.rs  harness.rs  manual.rs
deploy/: README.md  balancer.Dockerfile  base.toml  collector.Dockerfile  fly.prod.balancer.toml  fly.prod.logs.toml  fly.prod.monolith.toml  fly.prod.nginx.toml  fly.staging.balancer.toml  fly.staging.monolith.toml  monolith.Dockerfile  monolith.debian.Dockerfile  nginx.Dockerfile  nginx.prod.conf  ott-balancer-docker.toml  ott-balancer-prod.toml  ott-balancer-staging.toml  ott-collector-docker.toml  ott-prod.toml  ott-staging.toml  ott-test.toml
docker/: DOCKER.md  Dockerfile  Dockerfile-dev  README.md  docker-compose-dev.yml  docker-compose.e2e.yml  docker-compose.yml  nginx.conf  with-balancer.docker-compose.yml
docs/: api-old.yaml  api.yaml  architecture.md  config.md  custom-media-format.md  db.md  how-to-add-new-language.md  how-to-deploy.md  self-hosted-upgrade.md  synchronization.md
env/: .gitignore  balancer-tmp.toml  docker.base.toml  example.env  example.toml  heroku.base.toml
migrations/: 20190830172621-create-room.js  20190921194802-create-cached-video.js  20191210180250-add-visibility-to-rooms.js  20200322184635-add-mime-to-video.js  20200405160435-create-user.js  20200415024537-add-owner-id-to-rooms.js  20200620171123-add-discordId-to-user.js  20210121172521-add-permissions-to-rooms.js  20210508182154-add-queue-mode-to-rooms.js
models/: cachedvideo.js  index.js  room.js  room.ts  user.js  user.ts
patches/: rate-limiter-flexible+2.4.1.patch  sequelize+6.6.5.patch
public/: index.html  robots.txt
room-manager/: Cargo.toml
room-manager/src/: connection_manager.rs  main.rs  messages.rs  room.rs  room_manager.rs
scripts/: apply-base-config.sh  codegen.sh  configure-review-app.sh  set-version.sh
server/: .eslintignore  .eslintrc.js  .eslintrc.json  .gitignore  .sequelizerc  admin.ts  api.js  api.ts  app.js  app.ts  babel.config.cjs  babel.config.js  balancer.ts  client.ts  clientmanager.ts  exceptions.js  exceptions.ts  express-types.d.ts  ffprobe.js  ffprobe.ts  generated.ts  infoextractor.js  infoextractor.ts  logger.js  logger.ts  mailer.ts  messages.ts  metrics.ts  mime.js  mime.ts  ott-config.ts  package.json  permissions.js  rate-limit.js  rate-limit.ts  redisclient.ts  room.ts  roommanager.ts  serviceadapter.js  serviceadapter.ts  (+16 more)
src/: .eslintrc.js  App.vue  common  common-http.js  i18n.ts  main.js  router.js  shims-vue.d.ts  store.js  styleProxy.js  timestamp.js  tsconfig.json  variables.scss
tools/balancer-tester/: Cargo.toml
tools/balancer-tester/src/: cli.rs  main.rs  monolith.rs  protocol.rs
(+682 files in other folders)
