[workspace]
members = ["crates/*", "tools/*"]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1.68"
console-subscriber = "0.1.8"
futures-util = "0.3.28"
rand = "0.8.5"
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "9b0564e", features = ["json", "secrets", "uuid"] }
rocket_ws = { git = "https://github.com/SergioBenitez/Rocket", rev = "9b0564e" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
tokio = { version = "1", features = ["full", "tracing"] }
tokio-tungstenite = "0.18.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tungstenite = "0.19.0"
url = "2.3.1"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
