[workspace]
members = ["crates/*", "tools/*"]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1.68"
bytes = "1.4.0"
clap = { version = "4.3.12", features = ["derive"] }
console-subscriber = "0.1.8"
figment = { version = "0.10.10", features = ["toml", "env"] }
futures-util = "0.3.28"
harness = { path = "crates/harness" }
harness_macros = { path = "crates/harness_macros" }
hyper = { version = "1.0.0-rc.4", features = ["full"] }
hyper-util = { git ="https://github.com/hyperium/hyper-util.git", rev = "f898015" }
http-body-util = "0.1.0-rc.2"
once_cell = "1.17.1"
ott-common = { path = "crates/ott-common" }
ott-balancer-protocol = { path = "crates/ott-balancer-protocol" }
pin-project = "1.0.12"
rand = "0.8.5"
reqwest = { version = "0.11.17", features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = { version = "1", features = ["raw_value"] }
test-context = "0.1.4"
tokio = { version = "1", features = ["full", "tracing"] }
tokio-tungstenite = "0.19.0"
tokio-util = "0.7.8"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tungstenite = "0.19.0"
typeshare = "1.0.0"
url = "2.3.1"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
