[workspace]
members = ["crates/*", "tools/*"]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1.79"
bytes = "1.6.0"
clap = { version = "4.5.4", features = ["derive"] }
console-subscriber = "0.1.10"
criterion = { version = "0.5.1", features = ["async_tokio"] }
enum_dispatch = "0.3.13"
figment = { version = "0.10.15", features = ["toml", "env"] }
futures-util = "0.3.30"
harness = { path = "crates/harness" }
harness_macros = { path = "crates/harness_macros" }
hashring = "0.3.3"
hickory-resolver = { version = "0.24.0", features = ["system-config"] }
humantime-serde = "1.1"
hyper = { version = "1.3.1", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["full"] }
http-body-util = "0.1.1"
jemallocator = { version = "0.5.4" }
once_cell = "1.19.0"
ott-common = { path = "crates/ott-common" }
ott-balancer = { path = "crates/ott-balancer" }
ott-balancer-protocol = { path = "crates/ott-balancer-protocol" }
pin-project = "1.1.5"
prometheus = { version = "0.13.3", features = ["process"] }
rand = "0.8.5"
reqwest = { version = "0.12.3", features = ["json", "stream", "rustls-tls"] }
rocket = { version = "0.5.0", features = ["json"] }
rocket_ws = { version = "0.1.0" }
route-recognizer = "0.3.1"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = { version = "1", features = ["raw_value"] }
serde_path_to_error = "0.1.15"
test-context = "0.1.4"
tokio = { version = "1", features = ["full", "tracing"] }
tokio-tungstenite = "0.21.0"
tokio-util = "0.7.8"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "registry"] }
tungstenite = "0.21.0"
typeshare = "1.0.0"
url = "2.5.0"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
