[package]
name = "room-manager"
version = "0.1.0"
authors = ["Carson McManus <carson.mcmanus1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-web = "3"
actix-web-actors = "3.0.0"
actix-files = "0.3"
awc = "2"
env_logger = "0.8"
rand = "0.7"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
