[package]
name = "harness-tests"
version = "0.9.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
harness.workspace = true
ott-balancer-protocol.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
test-context.workspace = true
tokio.workspace = true
websocket = "0.26.5"
tokio-tungstenite.workspace = true
tungstenite.workspace = true
