[package]
name = "harness"
version = "0.6.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
clap.workspace = true
console-subscriber.workspace = true
figment.workspace = true
futures-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
ott-balancer-protocol.workspace = true
reqwest.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
test-context.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tokio-util.workspace = true
tungstenite.workspace = true
uuid.workspace = true
url.workspace = true
