[package]
name = "ott-balancer-bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
futures-util.workspace = true
rand.workspace = true
rocket.workspace = true
rocket_ws.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tungstenite.workspace = true
