[package]
name = "ott-balancer-bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
console-subscriber.workspace = true
futures-util.workspace = true
hyper.workspace = true
http-body-util = "0.1.0-rc.2"
rand.workspace = true
rocket.workspace = true
rocket_ws.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tungstenite.workspace = true
uuid.workspace = true
ott-balancer-protocol = { path = "../ott-balancer-protocol" }
route-recognizer = "0.3.1"
