[package]
name = "ott-collector"
description = "A small service to collect and aggregate system state from Balancers, and make it available to Grafana."
version = "0.10.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
ott-common.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dependencies.rocket]
features = ["json"]