[package]
name = "ott-collector"
description = "A small service to collect and aggregate system state from Balancers, and make it available to Grafana."
version = "0.13.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
clap.workspace = true
figment.workspace = true
humantime-serde.workspace = true
ott-common.workspace = true
ott-balancer-protocol.workspace = true
once_cell.workspace = true
reqwest.workspace = true
rocket.workspace = true
rocket_ws.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tungstenite.workspace = true
uuid.workspace = true
