[package]
name = "ott-common"
version = "0.7.0"
edition = "2021"

[dependencies]
async-trait.workspace = true
futures-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
pin-project.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tokio-util.workspace = true
tungstenite.workspace = true
