[package]
name = "balancer-tester"
version = "0.4.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
clap = { version = "4.2.4", features = ["derive"] }
futures-util.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
uuid.workspace = true
ott-balancer-protocol = { path = "../../crates/ott-balancer-protocol" }
